--- a/MyFirstApp/res/values/strings.xml
+++ b/MyFirstApp/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="button_send">Send</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
+    <string name="action_search">Search!</string>
 
 </resources>
